--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slutprojekt",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "home.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "font-awesome": "^4.7.0",
     "nodemon": "^2.0.20"
   }
 }
